// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchApiKeys() dispatches the correct action when no keys are present 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "url": "/api-keys",
    },
    "type": "FETCH_API_KEYS",
  },
]
`;

exports[`fetchGrants() dispatches the correct action when no grants are present 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "url": "/authenticate/grants",
    },
    "type": "FETCH_GRANTS",
  },
]
`;
